[gd_scene load_steps=14 format=2]

[ext_resource path="res://Cenario/cemeteryFinal.png" type="Texture" id=1]
[ext_resource path="res://scripts/cemetery.gd" type="Script" id=2]
[ext_resource path="res://scenes/ghost.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/deimos.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/interface3.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Portal3.gd" type="Script" id=6]
[ext_resource path="res://Cenario/portalFinal.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 850.5, 6.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 863.25, 8.375 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22.5, 334 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 325 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 860.5, 8.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 75 )

[node name="Cemetery" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ParallaxBackground" parent="."]

[node name="Texture" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.025
margin_right = -1260.0
margin_bottom = -626.25
rect_min_size = Vector2( 1700, 650 )
texture = ExtResource( 1 )

[node name="Deimos" parent="." instance=ExtResource( 4 )]
position = Vector2( 63, 328 )
scale = Vector2( 0.7, 0.7 )

[node name="Ghost" parent="." instance=ExtResource( 3 )]
position = Vector2( 1111, 62 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1332, 62 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1235, -42 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1238, 186 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost5" parent="." instance=ExtResource( 3 )]
position = Vector2( 1082, 566 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost6" parent="." instance=ExtResource( 3 )]
position = Vector2( 632, 531 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost7" parent="." instance=ExtResource( 3 )]
position = Vector2( 73.0001, 123 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost8" parent="." instance=ExtResource( 3 )]
position = Vector2( 613, 128 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost9" parent="." instance=ExtResource( 3 )]
position = Vector2( 939, 165 )
scale = Vector2( 0.1, 0.1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 849.5, -6 )
shape = SubResource( 3 )

[node name="inferior" type="Area2D" parent="StaticBody2D2"]
position = Vector2( -36, -70 )
collision_layer = 16384
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2/inferior"]
position = Vector2( 880, 720 )
shape = SubResource( 6 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( -20, 316 )
shape = SubResource( 4 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( 1311, 319 )
shape = SubResource( 5 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
position = Vector2( 837, 655.5 )
shape = SubResource( 7 )

[node name="superior" type="Area2D" parent="StaticBody2D5"]
position = Vector2( -36, -70 )
collision_layer = 256
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5/superior"]
position = Vector2( 878, 66 )
shape = SubResource( 6 )

[node name="Portal3" type="Area2D" parent="."]
position = Vector2( 97, -8 )
scale = Vector2( 0.7, 0.7 )
z_index = -1
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Portal3"]
position = Vector2( 1628, 94 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal3"]
position = Vector2( 1630, 96 )
shape = SubResource( 1 )

[node name="Interface3" parent="." groups=["Interface"] instance=ExtResource( 5 )]

[node name="Ghost10" parent="." instance=ExtResource( 3 )]
position = Vector2( 788, 310 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost11" parent="." instance=ExtResource( 3 )]
position = Vector2( 148, 561 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost12" parent="." instance=ExtResource( 3 )]
position = Vector2( 492, 323 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost13" parent="." instance=ExtResource( 3 )]
position = Vector2( 332, 463 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost14" parent="." instance=ExtResource( 3 )]
position = Vector2( 306, 112 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost15" parent="." instance=ExtResource( 3 )]
position = Vector2( 378, 575 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost16" parent="." instance=ExtResource( 3 )]
position = Vector2( 1176, 387 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost17" parent="." instance=ExtResource( 3 )]
position = Vector2( 234, 306 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost18" parent="." instance=ExtResource( 3 )]
position = Vector2( 792, 57 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost19" parent="." instance=ExtResource( 3 )]
position = Vector2( 570, -40 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost20" parent="." instance=ExtResource( 3 )]
position = Vector2( 1030, 289 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost21" parent="." instance=ExtResource( 3 )]
position = Vector2( 908, 500 )
scale = Vector2( 0.1, 0.1 )

[connection signal="body_entered" from="Portal3" to="Portal3" method="_on_Portal3_body_entered"]
